--- a/biblio/dsym.bib
+++ b/biblio/dsym.bib
@@ -40,6 +40,7 @@
 % az inverz problema felvetese: Mikor kaptuk egyszeresen osszefuggo manifoldbol
 % az eredmenyt? Az osszes lenyeges feltetel felsorolasa (kisebb dim gomb, 2 dim
 % gomb), peldak.
+% Andreas Dress: andreas at picb.ac.cn
 @article{D87,
   author  = "A. W. M. Dress",
   title   = "Presentation of discrete groups acting on simply connected
@@ -77,6 +78,7 @@
 }
 
 % Nem lehet letolteni ingyen
+% Daniel Huson: daniel.huson at uni-tuebingen.de
 @article{DHM93,
   author  = "A. W. M. Dress and D. H. Huson and E. Molnár",
   title   = "The classifications of face-transitive periodic three-dimensional
@@ -114,6 +116,7 @@
 
 % E3 D-szimbolumok megkeresese, kodolasi mechanizmus, amit DHM93-bol vett at.
 % Egy kis GAP program leirasa.
+% email: olaf.delgado at googlemail.com esetleg delgado at mathematik.uni-bielefeld.de(2001)
 @phdthesis{F94,
   author  = "O. Delgado-Friedrichs",
   title   = "Euclidicity criteria for three-dimensional branched
@@ -137,7 +140,7 @@
 
 % El tranzitiv sikbeli kovezesek
 @article{LMS94,
-  author  = "Z. Lu\v{c}i\'c, E. Molnár and M. Stojanovi\'c",
+  author  = "Z. Lu\v{c}i\'c and E. Molnár and M. Stojanovi\'c",
   title   = "The 14 infinte families of isotoxal tilings in the planes of
     constant curvature",
   year    = "1994",
@@ -224,6 +227,7 @@
   pages   = "233--244"
 }
 
+% Dolbilin: dolbilin at mi.ras.ru
 @article{DDH98,
   author  = "N. P. Dolbilin and A. W. M. Dress and D. H. Huson",
   title   = "Two finiteness theorems for periodic tilings of d-dimensional
